fix{navbar_fix): menu to align with the content at the center

--- a/core/static/css/tailwind.css
+++ b/core/static/css/tailwind.css
@@ -1502,6 +1502,10 @@ select {
   margin-bottom: -5rem;
 }
 
+.-ml-20 {
+  margin-left: -5rem;
+}
+
 .-mt-10 {
   margin-top: -2.5rem;
 }
@@ -1638,8 +1642,52 @@ select {
   margin-top: 1.5rem;
 }
 
-.-ml-10 {
-  margin-left: -2.5rem;
+.-ml-24 {
+  margin-left: -6rem;
+}
+
+.-ml-28 {
+  margin-left: -7rem;
+}
+
+.-ml-32 {
+  margin-left: -8rem;
+}
+
+.-ml-\[5vh\] {
+  margin-left: -5vh;
+}
+
+.-ml-\[4vh\] {
+  margin-left: -4vh;
+}
+
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+
+.-ml-16 {
+  margin-left: -4rem;
+}
+
+.ml-16 {
+  margin-left: 4rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-40 {
+  margin-top: 10rem;
 }
 
 .block {
@@ -2042,6 +2090,12 @@ select {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
